--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,6 @@
 ---
-import Header from "../lib/Header.astro";
-import { ViewTransitions } from "astro:transitions"
-
+import Header from '../lib/Header.jsx';
+import { ViewTransitions } from 'astro:transitions';
 
 interface Props {
   title: string;
