--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import Heading from "../lib/Heading.astro";
 import Proyectos from "../lib/Proyectos.astro";
-import Footer from "../lib/Footer.astro";
+import Footer from "../lib/Footer.jsx";
 ---
 
 <Layout title="ManGe | Incio">
