--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Heading from "../lib/Heading.astro";
-import Proyectos from "../lib/Proyectos.astro";
+import Heading from "../lib/Heading.jsx";
+import Proyectos from "../lib/Proyectos.jsx";
 import Footer from "../lib/Footer.jsx";
 ---
 
